# starfix-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/metamorphic/plans/: 2026-06-18-golden-vector-parity.md  2026-06-18-include-metadata-hashing.md  2026-06-28-timestamp-duration-hashing.md
docs/metamorphic/specs/: 2026-06-18-golden-vector-parity-design.md  2026-06-18-include-metadata-hashing-design.md  2026-06-28-timestamp-duration-hashing-design.md
docs/superpowers/plans/: 2026-04-08-pypi-release-pipeline.md
docs/superpowers/specs/: 2026-04-08-pypi-release-pipeline-design.md
src/starfix/: __init__.py  arrow_digester.py  server.py
tests/: test_arrow_digester.py  test_golden_parity.py  test_golden_parity_metadata.py  test_golden_parity_r2.py  test_metadata_hashing.py  test_server.py
tests/golden/: include_metadata_v0.3.json
