[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "starfix"
dynamic = ["version"]
description = "Pure-Python implementation of starfix Arrow logical hasher"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT OR Apache-2.0"
authors = [{ name = "nauticalab" }]
keywords = ["arrow", "hashing"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = ["pyarrow>=14.0.0"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pip-licenses>=5.0.0"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/starfix/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/starfix"]
